--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,5 +1,7 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+html
+  head
+    h1 My Site - #{title}
+    block scripts
+  body
+    div#app
+      script(src='/javascripts/pack.js')
