--- a/app/views/test.html
+++ b/app/views/test.html
@@ -8,6 +8,6 @@
 	<link rel="stylesheet" href="../public/css/tea-1.2.min.css">
 </head>
 <body>
-	<div id="content"><%-rh%><script>var APP_PROPS = <%-props%></script><script src="/javascripts/pack.js"></script></div>
+	<div id="content"><%-rh%><script>var APP_PROPS = <%-props%></script><script src="/js/pack.js"></script></div>
 </body>
 </html>
