--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Redux Universal Example</title>
+    <link rel="stylesheet" type="text/css" href="/stylesheet/style.css">
   </head>
   <body>
     <div id="root">{{=app}}</div>
