--- a/dest/server/views/index.html
+++ b/dest/server/views/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <title>{{=title}}</title>
-  <link href="../public/css/index-d1c058e6.css" rel="stylesheet"></head>
+  <link href="../public/css/index-41884ca0.css" rel="stylesheet"></head>
   <body>
-    <div id="root">{{=html}}</div>
+    <div id="root" class="menu">{{=html}}</div>
     <script>
       window.__INITIAL_STATE__ = {{=initialState}};
     </script>
-  <script type="text/javascript" src="../public/js/common-1fdf77ad.js"></script><script type="text/javascript" src="../public/js/index-d1c058e6.js"></script></body>
+  <script type="text/javascript" src="../public/js/common-aa898003.js"></script><script type="text/javascript" src="../public/js/index-41884ca0.js"></script></body>
 </html>
