--- a/src/server/views/index.html
+++ b/src/server/views/index.html
@@ -4,7 +4,7 @@
     <title>{{=title}}</title>
   </head>
   <body>
-    <div id="root">{{=html}}</div>
+    <div id="root" class="menu">{{=html}}</div>
     <script>
       window.__INITIAL_STATE__ = {{=initialState}};
     </script>
